--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </li>
                 <li class="team-item">
                     <img class="team-image" src="/images/img2.jpg" alt="фото Ольга Рєпіна" width="270">
-                    <h class="team-name">Ольга Рєпіна</h>
+                    <h3 class="team-name">Ольга Рєпіна</h3>
                     <p class="team-text">Frontend Developer</p>
                 </li>
                 <li class="team-item">
