--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <!--секция хедер-->
     <!--секция хедер-->
     <header class="header">
-        <div class="container">
+        <div class="container header-container">
             <a class="header-link link" href="/index.html">Web<span class="header-link-logo">Studio</span></a> 
             <!--главная навигация-->
                 <nav class="nav">
@@ -29,10 +29,12 @@
                         <li class="nav-item"><a class="nav-link link" href="">Контакти</a></li>
                     </ul>
                 </nav>
+
                 <ul class="header-list list">
                     <li class="header-item"> <a class="header-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
                     <li class="header-item"> <a class="header-contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
+
         </div>
     </header>
     <!--Уникальный контент-->
