--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </section>
     <!--Секция О нас-->
-    <section class="about">
+    <section class="section about ">
         <div class="container">
             <ul class="about-list list">
                 <li class="about-item">
@@ -68,7 +68,7 @@
             </ul>
         </div>
     </section>
-    <section class="services">
+    <section class="section services ">
         <div class="container">
             <h2 class="services-title">Чим ми займаємося</h2>
             <ul class="services-list list">
@@ -79,7 +79,7 @@
         </div>
     </section>
  <!--Секция Наша команда-->
-    <section class="team">
+    <section class="section team ">
         <div class="container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list list">
@@ -110,10 +110,10 @@
     <!--Секция футер-->
     <footer class="footer">
         <div class="container">
-            <a class="footer-link link" href="/index.html">Web<span class="footer-logo">Studio</span></a> 
+            <div class="logo-footer"><a class="footer-link link" href="/index.html">Web<span class="footer-logo">Studio</span></a> </div>
             <address class="footer-address">
                 <ul class="footer-list list">
-                    <li class="footer-item"><a class="footer-adress link" href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru" target="_blank" rel="noopener  noreferrer" >г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="footer-item"><a class="footer-adress link" href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru" target="_blank" rel="noopener  noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
                     <li class="footer-item"><a class="footer-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
                     <li class="footer-item"><a class="footer-contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
