--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     </header>
     <!--Уникальный контент-->
     <main>
-        <section class="filter">
+        <section class=" section filter">
             <div class="container">
                 <ul class="filter-list list">
                     <li class="filter-item"><button class="filter-button current" type="button">Усі</button></li>
@@ -102,10 +102,10 @@
     <!--Секция футер-->
     <footer class="footer">
         <div class="container">
-            <a class="footer-link link" href="/index.html">Web<span class="footer-logo">Studio</span></a> 
+            <div class="logo-footer"><a class="footer-link link" href="/index.html">Web<span class="footer-logo">Studio</span></a> </div>
             <address class="footer-address">
                 <ul class="footer-list list">
-                    <li class="footer-item"><a class="footer-adress link" href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru" target="_blank" rel="noopener  noreferrer" >г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="footer-item"><a class="footer-adress link" href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru" target="_blank" rel="noopener  noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
                     <li class="footer-item"><a class="footer-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
                     <li class="footer-item"><a class="footer-contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
