--- a/portfolio.html
+++ b/portfolio.html
@@ -56,42 +56,42 @@
                         <p class="portfolio-text">Веб-сайт</p>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="/images.portfolio/img2.jpg" alt="постер" width="370">
+                        <img class="portfolio-image" src="./images.portfolio/img2.jpg" alt="постер" width="370">
                         <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
                         <p class="portfolio-text">Дизайн</p>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="/images.portfolio/img3.jpg" alt="логотип" width="370">
+                        <img class="portfolio-image" src="./images.portfolio/img3.jpg" alt="логотип" width="370">
                         <h3 class="portfolio-title">Ресторан Seafood</h3>
                         <p class="portfolio-text">Додаток</p>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="/images.portfolio/img4.jpg" alt="наушники" width="370">
+                        <img class="portfolio-image" src="./images.portfolio/img4.jpg" alt="наушники" width="370">
                         <h3 class="portfolio-title">Проєкт Prime</h3>
                         <p class="portfolio-text">Маркетинг</p>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="/images.portfolio/img5.jpg" alt="коробки" width="370">
+                        <img class="portfolio-image" src="./images.portfolio/img5.jpg" alt="коробки" width="370">
                         <h3 class="portfolio-title">Проєкт Boxes</h3>
                         <p class="portfolio-text">Додаток</p>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="/images.portfolio/img6.jpg" alt="монитор" width="370">
+                        <img class="portfolio-image" src="./images.portfolio/img6.jpg" alt="монитор" width="370">
                         <h3 class="portfolio-title">Inspiration has no Borders</h3>
                         <p class="portfolio-text">Веб-сайт</p>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="/images.portfolio/img7.jpg" alt="книга" width="370">
+                        <img class="portfolio-image" src="./images.portfolio/img7.jpg" alt="книга" width="370">
                         <h3 class="portfolio-title">Видання Limited Edition</h3>
                         <p class="portfolio-text">Дизайн</p>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="/images.portfolio/img8.jpg" alt="бирка" width="370">
+                        <img class="portfolio-image" src="./images.portfolio/img8.jpg" alt="бирка" width="370">
                         <h3 class="portfolio-title">Проєкт LAB</h3>
                         <p class="portfolio-text">Маркетинг</p>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-image" src="/images.portfolio/img9.jpg" alt="ноутбук" width="370">
+                        <img class="portfolio-image" src="./images.portfolio/img9.jpg" alt="ноутбук" width="370">
                         <h3 class="portfolio-title">Growing Business</h3>
                         <p class="portfolio-text">Додаток</p>
                     </li>
