--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,12 +19,12 @@
     <!--секция хедер-->
     <header class="header">
         <div class="container header-container">
-            <a class="header-link link" href="/index.html">Web<span class="header-link-logo">Studio</span></a> 
+            <a class="header-link link" href="./index.html">Web<span class="header-link-logo">Studio</span></a> 
             <!--главная навигация-->
                 <nav class="nav">
                     <ul class="nav-list list">
-                        <li class="nav-item"><a class="nav-link link current" href="/index.html">Студія</a></li>
-                        <li class="nav-item"><a class="nav-link link" href="/portfolio.html">Портфоліо</a></li>
+                        <li class="nav-item"><a class="nav-link link current" href="./index.html">Студія</a></li>
+                        <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфоліо</a></li>
                         <li class="nav-item"><a class="nav-link link" href="">Контакти</a></li>
                     </ul>
                 </nav>
@@ -72,9 +72,9 @@
         <div class="container">
             <h2 class="services-title">Чим ми займаємося</h2>
             <ul class="services-list list">
-                <li class="services-item"><img class="services-image" src="/images/box1.jpg" alt="кодинг" width="370"></li>
-                <li class="services-item"><img class="services-image" src="/images/box2.jpg" alt="ноутбук з презентацією" width="370"></li>
-                <li class="services-item"><img class="services-image" src="/images/box3.jpg" alt="палітра кольорів" width="370"></li>
+                <li class="services-item"><img class="services-image" src="./images/box1.jpg" alt="кодинг" width="370"></li>
+                <li class="services-item"><img class="services-image" src="./images/box2.jpg" alt="ноутбук з презентацією" width="370"></li>
+                <li class="services-item"><img class="services-image" src="./images/box3.jpg" alt="палітра кольорів" width="370"></li>
             </ul>
         </div>
     </section>
@@ -84,22 +84,22 @@
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list list">
                 <li class="team-item">
-                    <img class="team-image" src="/images/img1.jpg" alt="фото Ігор Дем'яненко" width="270">
+                    <img class="team-image" src="./images/img1.jpg" alt="фото Ігор Дем'яненко" width="270">
                     <h3 class="team-name">Ігор Дем'яненко</h3>
                     <p class="team-text">Product Designer</p>
                 </li>
                 <li class="team-item">
-                    <img class="team-image" src="/images/img2.jpg" alt="фото Ольга Рєпіна" width="270">
+                    <img class="team-image" src="./images/img2.jpg" alt="фото Ольга Рєпіна" width="270">
                     <h3 class="team-name">Ольга Рєпіна</h3>
                     <p class="team-text">Frontend Developer</p>
                 </li>
                 <li class="team-item">
-                    <img class="team-image" src="/images/img3.jpg" alt="фото Микола Тарасов" width="270">
+                    <img class="team-image" src="./images/img3.jpg" alt="фото Микола Тарасов" width="270">
                     <h3 class="team-name">Микола Тарасов</h3>
                     <p class="team-text">Marketing</p>
                 </li>
                 <li class="team-item">
-                    <img class="team-image" src="/images/img4.jpg" alt="фото Михайло Єрмаков" width="270">
+                    <img class="team-image" src="./images/img4.jpg" alt="фото Михайло Єрмаков" width="270">
                     <h3 class="team-name">Михайло Єрмаков</h3>
                     <p class="team-text">UI Designer</p>
                 </li>
@@ -110,7 +110,7 @@
     <!--Секция футер-->
     <footer class="footer">
         <div class="container">
-            <div class="logo-footer"><a class="footer-link link" href="/index.html">Web<span class="footer-logo">Studio</span></a> </div>
+            <div class="logo-footer"><a class="footer-link link" href="./index.html">Web<span class="footer-logo">Studio</span></a> </div>
             <address class="footer-address">
                 <ul class="footer-list list">
                     <li class="footer-item"><a class="footer-adress link" href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru" target="_blank" rel="noopener  noreferrer" >м. Київ, пр-т Лесі Українки, 26</a></li>
